k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sampleapp
spec:
  type: ClusterIP
  selector:
    app: sampleapp
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
